# rosbag2

./: .gitignore  DEVELOPING.md  LICENSE  NOTICE  README.md  config.yaml  generate_python_stubs.sh  readme.md
keyboard_handler/: CMakeLists.txt  package.xml
keyboard_handler/include/keyboard_handler/: keyboard_handler.hpp  keyboard_handler_base.hpp  keyboard_handler_unix_impl.hpp  keyboard_handler_windows_impl.hpp  visibility_control.hpp
keyboard_handler/src/: default_unix_key_map.cpp  default_windows_key_map.cpp  keyboard_handler_base.cpp  keyboard_handler_unix_impl.cpp  keyboard_handler_windows_impl.cpp
keyboard_handler/test/: fake_player.hpp  fake_recorder.hpp  keyboard_handler_tests.cpp  keyboard_handler_unix_tests.cpp  keyboard_handler_windows_tests.cpp
leveldb_vendor/: CHANGELOG.rst  CMakeLists.txt  README.md  leveldb_cmakefile.diff  leveldb_vendor-extras.cmake  package.xml
leveldb_vendor/cmake/Modules/: Findleveldb.cmake
liblz4_vendor/: CHANGELOG.rst  CMakeLists.txt  README.md  liblz4_vendor-extras.cmake  package.xml
liblz4_vendor/cmake/Modules/: Findlz4.cmake
lz4_vendor/: CMakeLists.txt  README.md  lz4_vendor-extras.cmake  package.xml
lz4_vendor/cmake/Modules/: Findlz4.cmake
mcap_vendor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mcap_vendor/src/: main.cpp
ros1_rosbag_storage_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosbag1_encryption_patch.diff  rosbag1_for_ros2_patch.diff  rosbag1_patch.diff
ros1_rosbag_storage_vendor/cmake/: CMakeLists.txt.in
ros1_rosbag_storage_vendor/resources/: bagcpp.diff  bagcpp_name.diff  bagh.diff  cmakeliststxt.diff  packagexml.diff  plugin_descriptionxml.diff  rosbag1_ament_patch.diff
ros2bag/: CHANGELOG.rst  CMakeLists.txt  package.xml  pytest.ini  setup.py
ros2bag/ros2bag/api/: __init__.py
ros2bag/ros2bag/command/: bag.py
ros2bag/ros2bag/verb/: __init__.py  burst.py  convert.py  filter.py  info.py  list.py  play.py  record.py  reindex.py
ros2bag/test/: test_api.py  test_burst.py  test_burst_args_parser.py  test_cli_extension.py  test_convert.py  test_copyright.py  test_flake8.py  test_info.py  test_pep257.py  test_play_qos_profiles.py  test_player_args_parser.py  test_qos_profiles.py  test_record.py  test_record_qos_profiles.py  test_record_with_compression_thread_priority.py  test_recorder_args_parser.py  test_reindex.py
ros2bag/test/resources/: incomplete_qos_duration.yaml  incomplete_qos_profile.yaml  negative_qos_profile.yaml  qos_profile.yaml
rosbag2/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2/include/rosbag2/: converter.hpp  converter_options.hpp  format_converter_factory.hpp  format_converter_factory_impl.hpp  format_converter_interface.hpp  formatter.hpp  info.hpp  logging.hpp  reader.hpp  rosbag2.h  rosbag2.hpp  rosbag2_factory.hpp  rosbag2_play_options.hpp  sequential_reader.hpp  serialization_format_converter_factory.hpp  serialization_format_converter_factory_interface.hpp  serialization_format_converter_interface.hpp  storage_options.hpp  types.hpp  typesupport_helpers.hpp  visibility_control.h  visibility_control.hpp  writer.hpp  writer_impl.hpp
rosbag2/src/: load_typesupport_handle.cpp  load_typesupport_handle_c.cpp  load_typesupport_handle_cpp.cpp
rosbag2/src/rosbag2/: component_player.cpp  converter.cpp  demo_play.cpp  demo_record.cpp  format_converter_factory_impl.cpp  formatter.cpp  generic_publisher.cpp  generic_publisher.hpp  generic_subscription.cpp  generic_subscription.hpp  info.cpp  main.cpp  main_record.cpp  player.cpp  player.hpp  raw_publisher.cpp  raw_publisher.hpp  raw_subscription.cpp  raw_subscription.hpp  reader.cpp  reader.hpp  replayable_message.hpp  rosbag2.cpp  rosbag2_factory.cpp  rosbag2_node.cpp  rosbag2_node.hpp  rosbag2_publisher.cpp  rosbag2_publisher.hpp  sequential_reader.cpp  sequential_reader_impl.cpp  sequential_reader_impl.hpp  serialization_format_converter_factory.cpp  serialization_format_converter_factory_impl.hpp  typesupport_helpers.cpp  typesupport_helpers.hpp  writer.cpp  writer_impl.cpp  writer_impl.hpp
rosbag2/test/rosbag2/: mock_storage.hpp  (+41 more)
rosbag2_bag_v2_plugins/: CHANGELOG.rst  CMakeLists.txt  README.md  converter_plugin_description.xml  package.xml  plugin_description.xml  storage_plugin_description.xml
rosbag2_bag_v2_plugins/resources/: test_bag.bag  test_bag_multiple_connections.bag
rosbag2_bag_v2_plugins/src/: generate_coverter_cpp.py
rosbag2_compression/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  package.xml  plugin_description.xml
rosbag2_compression/cmake/: rosbag2_compression_register_compression_plugin.cmake
rosbag2_compression_default_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
rosbag2_compression_default_plugins/src/: zstd_decompressor.cpp
rosbag2_compression_zstd/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  package.xml  plugin_description.xml
rosbag2_converter_default_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
rosbag2_cpp/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  package.xml
rosbag2_extensions/: CMakeLists.txt  package.xml
rosbag2_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_interfaces/msg/: ReadSplitEvent.msg  WriteSplitEvent.msg
rosbag2_interfaces/srv/: Burst.srv  GetRate.srv  IsDiscoveryStopped.srv  IsPaused.srv  Play.srv  PlayFor.srv  PlayNext.srv  PlayUntil.srv  Seek.srv  SetRate.srv
rosbag2_keyboard_handler/: CMakeLists.txt  package.xml
rosbag2_keyboard_handler/src/: IKeyboardHandler.cpp  KeyboardHandlerUnixImpl.cpp  keyboard_handler_base.cpp  keyboard_handler_unix_impl.cpp
rosbag2_keyboard_handler/test/: FakePlayer.hpp  FakeRecorder.hpp  KeyboardHandlerTests.cpp  fake_player.hpp  fake_recorder.hpp  keyboard_handler_tests.cpp
rosbag2_performance_testing/: CMakeLists.txt  package.xml  performance_test.py
rosbag2_performance_testing/expected/: large_message_test_expected.yaml
rosbag2_performance_testing/launch/: large_message_launch.launch.py
rosbag2_performance_testing/performance_publishers/: CMakeLists.txt  package.xml
rosbag2_performance_testing/scripts/: performance_test.py
(+1180 files in other folders)
