<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcap_vendor</name>
  <version>0.22.0</version>
  <description>mcap vendor package</description>
  <maintainer email="ros-tooling@foxglove.dev">Foxglove</maintainer>
  <maintainer email="michael.orlov@apex.ai">Michael Orlov</maintainer>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <depend>zstd_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
