<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros1_rosbag_storage_vendor</name>
  <version>0.0.3</version>
  <description>Vendor package for rosbag_storage of ROS1</description>
  <maintainer email="karsten@openrobotics.org">Karsten Knese</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>bzip2</build_depend>
  <build_depend>libconsole-bridge-dev</build_depend>
  <build_depend>libgpgme-dev</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>pluginlib</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
