<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2bag</name>
  <version>0.1.1</version>
  <description>
    Entry point for rosbag in ROS 2
  </description>
  <maintainer email="karsten@openrobotics.org">Karsten Knese</maintainer>
  <license>Apache License 2.0</license>

  <depend>ros2cli</depend>
  <depend>rosbag2_transport</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
